--- a/ejercicios/proyectoCalc/index.html
+++ b/ejercicios/proyectoCalc/index.html
@@ -4,59 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    <script defer type = "text/javascript" src="./js/calc.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="calc">
-        <div class="field">
-            
-        </div>
+        <div class="field" id="cadena">0</div>
     <div class="row">
 
-        <input type="button" value="M" class="button">
-        <input type="button" value="<" class="button">
-        <input type="button" value="C" class="button">
-        <input type="button" value="CE" class="button">
+        <input type="button" value="M" class="button" id="M">
+        <input type="button" value="<" class="button" id="<">
+        <input type="button" value="C" class="button" id="C">
+        <input type="button" value="CE" class="button" id="CE">
 
     </div>
 
     <div class="row">
-        <input type="button" value="7" class="button">
-        <input type="button" value="8" class="button">
-        <input type="button" value="9" class="button">
-        <input type="button" value="+" class="button">
+        <input type="button" value="7" class="number" id="7">
+        <input type="button" value="8" class="number" id="8">
+        <input type="button" value="9" class="number" id="9">
+        <input type="button" value="+" class="operator" id="+">
 
     </div>
 
     <div class="row">
-        <input type="button" value="4" class="button">
-        <input type="button" value="5" class="button">
-        <input type="button" value="6" class="button">
-        <input type="button" value="-" class="button">
+        <input type="button" value="4" class="number" id="4">
+        <input type="button" value="5" class="number" id="5">
+        <input type="button" value="6" class="number" id="6">
+        <input type="button" value="-" class="operator" id="-">
 
     </div>
 
     <div class="row">
-        <input type="button" value="1" class="button">
-        <input type="button" value="2" class="button">
-        <input type="button" value="3" class="button">
-        <input type="button" value="/" class="button">
+        <input type="button" value="1" class="number" id="1">
+        <input type="button" value="2" class="number" id="2">
+        <input type="button" value="3" class="number" id="3">
+        <input type="button" value="/" class="operator" id="/">
 
     </div>
 
     <div class="row">
-        <input type="button" value="+/-" class="button">
-        <input type="button" value="0" class="button">
-        <input type="button" value="." class="button">
-        <input type="button" value="*" class="button">
+        <input type="button" value="+/-" class="operator" id="+/-">
+        <input type="button" value="0" class="number" id="0">
+        <input type="button" value="." class="operator" id=".">
+        <input type="button" value="*" class="operator" id="*">
 
     </div>
 
     <div class="row">
-        <input type="button" value="1/x" class="button">
-        <input type="button" value="^1/2" class="button">
-        <input type="button" value="%" class="button">
-        <input type="button" value="=" class="button">
+        <input type="button" value="1/x" class="operator" id="1/x">
+        <input type="button" value="√" class="operator" id="^1/2">
+        <input type="button" value="%" class="operator" id="%">
+        <input type="button" value="=" class="operator" id="=">
 
     </div>
 
