--- a/ejercicios/proyectoCalc/index.html
+++ b/ejercicios/proyectoCalc/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet" type="text/css" />
+    
     <script defer type = "text/javascript" src="./js/calc.js"></script>
+    <script defer type = "text/javascript" src="./js/operaciones.js"></script>
+    <script defer type = "text/javascript" src="./js/cadena.js"></script>
+    
     <title>Document</title>
 </head>
 <body>
