--- a/Resuelto/clase0611/01da-CRUDjs-Cookiesv3/index.html
+++ b/Resuelto/clase0611/01da-CRUDjs-Cookiesv3/index.html
@@ -11,29 +11,29 @@
 	<script defer src="./js/grabarDato.js" type="text/javascript"></script>
 	<script defer src="./js/script.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="./css/styles.css" />
-	<title>LocalStorage</title>
+	<title>Cookies</title>
 </head>
 
 <body>
 	<div id="contenedor">
-		<h2>Práctica. CRUD. JSES6. 'LocalStorage'</h2>
+		<h2>Práctica. CRUD. JSES6. 'cookies'</h2>
 <!-- 		<form id="form1" action="#" method="post"> -->
 			<fieldset>
-				<legend>Guardar nombre y edad</legend>
+				<legend>Guardar nombre y valor</legend>
 				<table id="tabla" class="filas">
 					<thead>
 						<tr>
-							<th><label name="labelNombre" for="nombre">Introduce un nombre</label></th>
-							<th><label name="labelEdad" for="edad">Introduce una edad</label></th>
+							<th><label name="labelNombre" for="clave">Introduce un nombre</label></th>
+							<th><label name="labelValor" for="valor">Introduce un valor</label></th>
 						</tr>
 						<tr>
 							<th>
-								<input type="text" id="nombre" class="control" name="nombre" size="20"
+								<input type="text" id="clave" class="control" name="clave" size="20"
 									placeholder="Escribe un nombre..." required />
 							</th>
 							<th>
-								<input type="text" id="edad" class="control" name="edad" size="20"
-									placeholder="Escribe un edad..." required />
+								<input type="text" id="valor" class="control" name="valor" size="20"
+									placeholder="Escribe un valor..." required />
 							</th>
 							<th>
 								<input type="button" id="guardar" value="Guardar"></input>
@@ -41,12 +41,8 @@
 										style="vertical-align: middle" />
 								<input type="button" id="borrar" value="Borrar"></input>
 								<img src="./img/delete.svg" alt="Borrar" width="22" height="22"
-										style="vertical-align: middle" id="imagen">
-
-								<input type="button" id="borrarTodo" value="Borrar todo"></input>
-								<img src="./img/delete.svg" alt="Borrar" width="22" height="22"
-										style="vertical-align: middle" id="imagen">
-						</th>
+										style="vertical-align: middle" id="imagen"
+						</tr>
 					</thead>
 					<tbody id="cuerpo">
 					</tbody>
